@@ -1,3 +1,9 @@
+2006-01-09  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR fortran/21977
+	* gfortran.dg/nesting_2.f90: New test.
+	* gfortran.dg/nesting_3.f90: New test.
+
 2005-01-09  Erik Edelmann  <eedelman@gcc.gnu.org>
 
 	PR fortran/25093
